# Projeto_SLA_API

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  teste.py
src/: config.py  manager.py  middleware.py  security.py
src/configs/database/: connect_managerpayments.py
src/controller/autentic/: session_user.py
src/controller/ticket/: close_ticket.py  create_ticket.py  list_ticket.py
src/controller/user/: active_or_disable_user.py  create_user.py  reset_password_user.py  search_user_by_cpf.py  update_data_user.py
src/model/agency/: agency_type.py  entity_agency.py  tb_agency.py
src/model/ticket/: entity_ticket.py  priority.py  status_ticket.py  tb_ticket.py
src/model/user/: entity_user.py  tb_user.py  user_role.py  user_status.py  user_type.py
src/repository/ticket/: ticket_repository.py
src/repository/user/: user_repository.py
src/routes/login/: routes_login.py
src/routes/ticket/: routes_ticket.py
src/routes/user/: routes_user.py
src/service/autentic/: service_autentic.py
src/service/ticket/: service_create_ticket.py
src/service/user/: service_active_or_disable_user.py  service_create_user.py  service_reset_password_user.py  service_search_user.py  service_update_data_user.py
src/utilities/: converter.py  folder_zip.py  ibge.py  utility.py
